--- a/AllergenAlertMVC/AllergenAlertMVC/Views/Shared/_Layout.cshtml
+++ b/AllergenAlertMVC/AllergenAlertMVC/Views/Shared/_Layout.cshtml
@@ -31,8 +31,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Restaurant" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Restaurant" asp-action="Add">Add</a></li>
+                    <Remove><a asp-area="" asp-controller="Restaurant" asp-action="Remove"></a></Remove>
                 </ul>
             </div>
         </div>
