created restaurant database table using ef

--- a/AllergenAlertMVC/AllergenAlertMVC/Views/Shared/_Layout.cshtml
+++ b/AllergenAlertMVC/AllergenAlertMVC/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Restaurant" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Restaurant" asp-action="Add">Add</a></li>
-                    <Remove><a asp-area="" asp-controller="Restaurant" asp-action="Remove"></a></Remove>
+                    <li><a asp-area="" asp-controller="Restaurant" asp-action="Remove"></a></li>
                 </ul>
             </div>
         </div>
