added input for "phone" property of restaurant object

--- a/AllergenAlertMVC/AllergenAlertMVC/Views/Restaurant/Add.cshtml
+++ b/AllergenAlertMVC/AllergenAlertMVC/Views/Restaurant/Add.cshtml
@@ -17,6 +17,7 @@
 
     <div class="form-group">
         <label asp-for="Phone"></label>
+        <input class="form-control" asp-for="Phone" />
         <span asp-validation-for="Phone"></span>
     </div>
 
